--- a/src/styles/modules/_case-card.scss
+++ b/src/styles/modules/_case-card.scss
@@ -26,6 +26,7 @@
     margin-bottom: 16px;
 
     img {
+      max-width: 100px;
       max-height: 40px;
     }
   }
@@ -76,6 +77,7 @@
     justify-content: center;
     img {
       max-height: 85px;
+      max-width: 100px;
       width: auto;
     }
   }
